--- a/templates/product/content_list.html
+++ b/templates/product/content_list.html
@@ -14,7 +14,7 @@
     {% endfor %}
 {% else %}
     <p>content가 없습니다.</p>
-<p> hello word!</p>
+<p> hello world!!!!!!!!!!!!!!!!!!!!</p>
 {% endif %}
 </body>
 </html>
