--- a/templates/product/content_list.html
+++ b/templates/product/content_list.html
@@ -5,7 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-<h1>product</h1>
+<h1>서울신학대학교</h1>
+<form action="{% url 'search' %}" method="GET">
+  <input type="text" name="q" placeholder="검색어를 입력하세요...">
+  <button type="submit">검색</button>
+</form>
 {% if content_list %}
     {% for content in content_list %}
         <hr/>
@@ -14,7 +18,6 @@
     {% endfor %}
 {% else %}
     <p>content가 없습니다.</p>
-<p> hello world!!!!!!!!!!!!!!!!!!!!</p>
 {% endif %}
 </body>
 </html>
