--- a/templates/product/search_results.html
+++ b/templates/product/search_results.html
@@ -1,28 +1,24 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-{% extends 'base.html' %} {% block content %}
-  <h2>'{{ query }}'에 대한 검색 결과</h2>
+{% extends 'base.html' %}
 
-  {% if results %}
-    <p>총 {{ results|length }}개의 결과를 찾았습니다.</p>
+{% block content %}
 
-    <ul>
-      {% for item in results %}
-        <li>
-          <strong>[{{ item.type }}]</strong> <a href="{{ item.url }}">
-            {{ item.title }} </a>
-        </li>
-      {% endfor %}
-    </ul>
-  {% else %}
-    <p>검색 결과가 없습니다.</p>
-  {% endif %}
+    <h2>'{{ query }}'에 대한 검색 결과</h2>
+
+    {% if results %}
+        <p>총 {{ results|length }}개의 결과를 찾았습니다.</p>
+        
+        <ul>
+            {% for item in results %}
+                <li>
+                    <strong>[{{ item.type }}]</strong> 
+                    
+                    <a href="{% url 'product:detail' item.id %}">{{ item.title }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+        
+    {% else %}
+        <p>검색 결과가 없습니다.</p>
+    {% endif %}
 
 {% endblock %}
-</body>
-</html>
